# Green-Engine-2

./: #Planning.org#  .#Planning.org  .gitignore  CMakeLists backup (broken).txt  CMakeLists.txt  CMakeSettings.json  Planning.html  Planning.org  Planning.org_archive  README.md  build.lua  elinecount.bat  library.cpp  linecount.bat  snakemaze.txt
RawResources/buddha/source/buddha/: buddha.mtl
build_scripts/: #update_res.lua#  .#update_res.lua  bake_lightmaps.lua  build.sh  generate_shader_manifest.lua  shader_pre.cpp  update_res.lua  update_res.sh
cmake/: FindGLEWosd.cmake  FindGLFWosd.cmake  Findassimp.cmake  Libraries.cmake
cmakebuild/: CMakeCache.txt  cmake_install.cmake
cmakebuild/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
cmakebuild/Green_Engine_2.build/Debug/ALL_BUILD.build/: Script-147AD0843C05471EBBE14A7B.sh  dgph
cmakebuild/Green_Engine_2.build/Debug/Green_Engine_2.build/: dgph
cmakebuild/Green_Engine_2.build/Debug/ZERO_CHECK.build/: Script-0E3A21C4DAD8408B805B9142.sh  dgph
cmakebuild/Green_Engine_2.xcodeproj/: project.pbxproj
cmakebuild/res/debug/SolidColour/: solid.frag  vert.spv
cmakebuild/res/demo/shaders/: wave.gesm
cmakebuild/res/engine/: global_settings.pre
cmakebuild/res/scenes/: g22_t1.json
cmakebuild/res/shaders/debug/: preprocessor_test.glsl
include/com/ethanbreit/OpenGL/: FeatureHandler.h
include/com/ethanbreit/console/: ConsoleIO.h
include/com/ethanbreit/debug/: FreeMove.h  PreProcessor.h
include/com/ethanbreit/default_geom/: Cube.h
include/com/ethanbreit/error/: Error.h
include/com/ethanbreit/ge/: INFO.h
include/com/ethanbreit/graphics/: Camera.h  GraphicsCore.h
include/com/ethanbreit/input/: KeyboardHandler.h  KeyboardKey.h  MouseHandler.h
include/com/ethanbreit/loader/: LoadImage.h  LoadMesh.h  LoadScene.h  LoadShader.h  ShaderPreprocessor.h
include/com/ethanbreit/memory/: GlobalMemory.h  ReadableMemType.h
include/com/ethanbreit/runtime/: GlobalRuntime.h  Runtime.h  RuntimeGroup.h
include/com/ethanbreit/scene/: Scene.h
include/com/ethanbreit/util/: PreprocessorUtil.h  ResourceUtil.h  RotationUtil.h  StrUtil.h
libs/compiled/: TODO
libs/compiled/win/: OpenAL32.exp
libs/headers/: gecon.h  nuklear_glfw_gl3.h  nuklear_glfw_gl4.h
libs/headers/glm/: CMakeLists.txt  ext.hpp  fwd.hpp
libs/headers/glm/detail/: dummy.cpp  func_packing.inl  type_mat2x2.hpp  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x2.hpp  type_mat3x3.hpp  type_mat3x4.hpp  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x4.hpp  type_vec1.hpp
libs/headers/glm/gtc/: color_space.hpp  constants.hpp  epsilon.hpp  integer.hpp  matrix_access.hpp  matrix_inverse.hpp  matrix_transform.hpp  matrix_transform.inl  noise.hpp  packing.inl  quaternion.hpp  quaternion.inl  random.inl  reciprocal.hpp  ulp.hpp  ulp.inl  vec1.hpp
libs/headers/glm/gtx/: bit.hpp  common.hpp  compatibility.hpp  component_wise.hpp  dual_quaternion.hpp  dual_quaternion.inl  euler_angles.hpp  fast_trigonometry.hpp  hash.hpp  integer.hpp  intersect.hpp  io.hpp  matrix_decompose.hpp  norm.hpp  number_precision.hpp  quaternion.hpp  quaternion.inl  range.hpp  raw_data.hpp  rotate_normalized_axis.hpp  scalar_multiplication.hpp  simd_mat4.hpp  simd_quat.hpp  simd_vec4.hpp  string_cast.hpp  transform.hpp  type_aligned.hpp  vector_angle.hpp  wrap.hpp
libs/headers/json/: json.hpp
libs/headers/stb/: stb.h  stb_image.h  stb_voxel_render.h
res/debug/SolidColour/: compiled.vert  solid.frag  solid.gesm  solid.vert
res/demo/mats/: ice.gmat  tile.gmat  vsk.gmat
res/demo/scenes/: demo_scene (2).json  demo_scene.json
res/demo/shaders/: wave.frag  wave.vert
res/demo/shooter/levels/: l1.json
res/engine/: global_settings.pre
res/engine/defaults/common/: depth.gesm  depth.glsl
res/engine/defaults/skybox/: skybox.frag  skybox.gesm  skybox.vert
res/engine/shader/: #global_settings.pre#  global_settings.glsl  global_settings.pre
res/engine/shader/lighting/: lights.glsl
res/engine/shader/standards/: FRAG_OUT.glsl
res/ge/: t1.gesc  t2.gesc  t3.gesc  t4.gesc  t5.gesc
res/scenes/: g22_t1.json  g22_t2.json  g22_t3.json  g22_t4.json  g22_t5.json  test_scene.json
res/shaders/basic/Textured/: Textured.frag  Textured.vert
res/shaders/debug/: PosColour3D.frag  PosColour3D.vert
res/shaders/unlit/Textured/: Textured.frag  Textured.vert
res/tgesc/: t1.gesf
src/com/ethanbreit/OpenGL/: FeatureHandler.cpp
src/com/ethanbreit/console/: ConsoleIO.cpp
src/com/ethanbreit/debug/: FreeMove.cpp
src/com/ethanbreit/error/: Error.cpp
src/com/ethanbreit/graphics/: Camera.cpp  GraphicsCore.cpp
src/com/ethanbreit/input/: KeyboardHandler.cpp  MouseHandler.cpp
src/com/ethanbreit/loader/: LoadImage.cpp  LoadMesh.cpp  LoadScene.cpp  LoadShader.cpp  ShaderPreprocessor.cpp
test/: ExampleController.h  GroupIDs.h
test/Example1/: main.cpp
test/Example10/: main.cpp
test/Example11/: main.cpp
test/Example12/: main.cpp
test/Example13/: main.cpp
test/Example2/: main.cpp
test/Example3/: main.cpp
test/Example4/: main.cpp
test/Example5/: main.cpp
test/Example6/: main.cpp
test/Example7/: main.cpp
test/Example8/: main.cpp
test/Example9/: main.cpp
test/GLFW_cursor_repro/: main.cpp
test/Shooter/: main.cpp
test/Shooter/include/: levelhandler.h
test/Shooter/src/: core.cpp  levelhandler.cpp
test/broken/Example3/: main.cpp
test/broken/Example6/: main.cpp
test/broken/Example7/: main.cpp
test/broken/Example8/: main.cpp
test/broken/MetalTest/: MetalTest.cpp
test/broken/Shooter/: main.cpp
test/broken/common/: BasicLightModel.cpp  BasicLightModel.h  TexturedModel.cpp  TexturedModel.h  Triangle.cpp  Triangle.h
test/common/: BasicLightModel.cpp  BasicLightModel.h  ExampleModel.cpp  ExampleModel.h  GroupIDs.h  TexturedModel.cpp  TexturedModel.h  Triangle.cpp  Triangle.h
test/common/Broken/: ExampleModel.cpp  ExampleModel.h
test/old_examples/Example1/: main.cpp
test/old_examples/Example2/: main.cpp
test/old_examples/Example4/: main.cpp
test/old_examples/Example5/: main.cpp
(+489 files in other folders)
